Refactor, improved Seperation of Backend/Frontend